# opendrop

./: AUDIT.md  BUGFIX_SUMMARY.md  COMPLETE_IMPLEMENTATION.md  GUI_LAUNCH_SUCCESS.md  GUI_QUICK_START.md  OPTION_A_READY.md  README.md  TESTING_GUIDE_OPTION_A.md  TEST_NOW.md  TROUBLESHOOTING.md  pyproject.toml
assets/: opendrop-gui.desktop
docs/: DEVICE_DISCOVERY_FIX.md  HOW_IT_WORKS.md  INDEX.md
docs/development/: NEXT_STEPS.md  USER_SUPPORT_STRATEGY.md
docs/getting-started/: FRESH_INSTALL.md  NEXT_ACTIONS.md  QUICK_REFERENCE.md
docs/technical/: IMPLEMENTATION_SUMMARY.md  OPTION_A_ANALYSIS.md  VERIFICATION.md
docs/troubleshooting/: OWL_DIAGNOSTICS.md  OWL_TROUBLESHOOTING.md
opendrop/: ble.py  client.py  config.py  doctor.py  hardware.py  network.py  platform_compat.py  server.py  util.py
opendrop/gui/: __init__.py  ble_worker.py  main.py  owl_manager.py  privilege.py  settings.py  settings_dialog.py  tray.py  window.py  worker.py
packaging/: opendrop-doctor.desktop  opendrop-tray.service  opendrop.desktop  org.opendrop.policy  owl-awdl.service  owl.default
patches/owl/: 0001-gate-tests-and-googletest-behind-BUILD_TESTS-option.patch
scripts/: check-gui-ready.sh  debug-owl.sh  fix-apparmor-owl.sh  generate-icons.py  install.sh  opendrop-gui-wrapper.sh  opendrop-send.py  setup-askpass.sh  setup-context-menu.sh  setup-forks.sh  setup-owl.sh  uninstall-opendrop.sh  uninstall.sh  wifi-reconnect.sh
systemd/: owl-awdl.service
tests/: test_ble.py  test_hardware.py  test_network.py  test_platform_compat.py  test_self_discovery.py
